@@ -1,5 +1,9 @@
 2007-01-11	Benedikt Meurer <benny@xfce.org>
 
+	* exo-mount/main.c(main): Fix unused label if HAL is not available.
+
+2007-01-11	Benedikt Meurer <benny@xfce.org>
+
 	* exo/exo-mount-point.c(exo_mount_point_list_match_configured): Fix
 	  Linux build error.
 
